# mallet

./: .gitignore  Cargo.toml  README.md
resource/: card.xcf  card_transparent.xcf  card_white.xcf  logo.blend  logo.xcf
src/: asset.rs  brush.rs  editor.rs  entity.rs  game.rs  helper.rs  main.rs  script.rs  status.rs  user.rs  view.rs  widget.rs  window.rs
