[package]
name = "brushy"
version = "0.1.0"
edition = "2021"

[dependencies]
raylib = { git = "https://github.com/raylib-rs/raylib-rs.git" }
mlua   	    = { version = "0.10.1", features = ["luajit52", "vendored", "serialize", "async"] }
serde  	    = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
rfd		    = { version = "0.15.1" }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"